[package]
name = "Burst"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
home = "0.5.9"
log = "0.4.22"
rand = "0.8.5"
ratatui = "0.28.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"

[dev-dependencies]
anyhow = "1.0.89"
