[package]
name = "Burst"
version = "0.1.31"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
home = "0.5.9"
log = "0.4.22"
rand = "0.8.5"
thiserror = "2.0.1"
toml = "0.8.19"
uuid = "1.10.0"

[dev-dependencies]
anyhow = "1.0.89"

# Release profile
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Devolopment profile
[profile.dev]
opt-level = 0
panic = "abort"
